# Detapro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
detapro/: __init__.py  errors.py  userbase.py
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/detapro/: __init__.py
