[tool.poetry]
name = "detapro"
version = "0.1.0"
description = "A python package that further empowers the orginal Detabase "
authors = ["TheReaper62"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.7"
deta = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
